# QRHunter

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: install_ffmpeg.cmake
src/Core/: ApiDefs.hpp  QRCodeInfo.hpp  QRScanner.h
src/UI/: StreamQRScanner.cpp  StreamQRScanner.h  UtilMat.hpp  main.cpp
tests/: CMakeLists.txt  test_livestreamlink.cpp  test_qrinfo.cpp  test_qrscanner.cpp
